# lightwalk

./: Cargo.toml  LICENSE.md  README.md  gen_example_asm.sh
docs/: lib.rs.md
examples/: benchmark_asm.rs  hello_sdf.rs
src/: lib.rs  main.rs  marcher.rs  prelude.rs
src/combinators/: intersection.rs  mod.rs  operations.rs  union.rs
src/primitives/: cube.rs  mod.rs  sphere.rs
src/sdf/: mod.rs  state.rs
src/sdf/combinators/: difference.rs  intersection.rs  mod.rs  operations.rs  union.rs
src/sdf/primitives/: cube.rs  line.rs  mod.rs  plane.rs  sphere.rs
src/sdf/shader/: mod.rs
src/sdf/transformers/: boxed.rs  inverted.rs  mod.rs  operations.rs  repetition.rs  rotation.rs  rounding.rs  scale.rs  thickened.rs  translation.rs
src/transformers/: boxed.rs  mod.rs  operations.rs  repetition.rs  rotation.rs  rounding.rs  scale.rs  translation.rs
