[package]
name = "lightwalk"
version = "0.1.0"
edition = "2024"

[features]
default = ["glam", "shader"]
glam = ["dep:glam"]
shader = []
serde = ["dep:serde"]

[dependencies]
num = "0.4.3"

[dependencies.glam]
version ="0.30.3"
optional = true

[dependencies.serde]
version = "1.0.219"
optional = true
features = ["derive"]
